add mvc and migrations notes

--- a/class-notes/2014-10-21.md
+++ b/class-notes/2014-10-21.md
@@ -1,5 +1,36 @@
+# October 21, 2014
+
+Orientation, continued...
+
+## Morning
+
+* Intro to standup / standup
+
+* Intro to warmup
+* Warmup: [Goals, Anti-goals, Risks](https://github.com/gSchool/goals-anti_goals-risks)
+
+#### Days off:
+
+    * 2014-11-27
+    * 2014-11-28
+    * 2014-12-24
+    * 2014-12-25
+    * 2014-12-26
+    * 2014-12-29
+    * 2014-12-30
+    * 2015-12-31
+    * 2015-01-01
+    * 2015-01-02
+    * 2015-02-16
+
+[Intro to Rails](/lessons/rails-tutorial/00-overview/deliverable)
+
+
+
+
 
 ## gSchool Instructor Values and Beliefs
+
 #### Values
 ---------
 * Realistic Problems
@@ -105,11 +136,11 @@ conventions, developers can minimize potential errors.
 ```bash
   rm name-of-file-to-delete.txt #USE WITH CAUTION!
 ```
-#### mv - move a file OR rename a file 
+#### mv - move a file OR rename a file
 ```bash
   # move a file
   mv app/name-of-file.txt home/name-of-file.txt
-  
+
   # rename a file
   mv old-name-of-file.txt new-name-of-file.txt
 ```
@@ -131,7 +162,7 @@ conventions, developers can minimize potential errors.
 Absolute path starts with a forward slash (/)
 example: /Users/jfoley/Projects/gschool/todo
 
-Tilda (~) is an alias for your home folder 
+Tilda (~) is an alias for your home folder
 example: ~/Projects/gschool/todo
 
 /Users/jfoley/Projects/gschool/todo is equal to ~/Projects/gschool/todo
@@ -155,3 +186,12 @@ up all the gems listed in your Gemfile. You ask it to do this when you type:
 * Model
 * View
 * Controller
+
+#### Migrations
+
+* Databases have tables
+* Tables have rows and columns
+
+If a spreadsheet is like a database, then the tabs in the spreadsheet are like
+the tables in the database. And just like a spreadsheet, each table (just like
+each tab) has rows and columns that hold data.
