copy lessons folder to repo to make working links

--- a/class-notes/2014-10-21.md
+++ b/class-notes/2014-10-21.md
@@ -2,7 +2,7 @@
 
 Orientation, continued...
 
-## Morning
+## Morning  
 
 * Intro to standup / standup
 
@@ -25,14 +25,10 @@ Orientation, continued...
 
 [Intro to Rails](/lessons/rails-tutorial/00-overview/deliverable)
 
-
-
-
-
 ## gSchool Instructor Values and Beliefs
 
 #### Values
----------
+
 * Realistic Problems
 * Working Software
 * Teaching to think, over following recipe
@@ -46,7 +42,7 @@ Orientation, continued...
 * Transferrable Skills
 
 #### Beliefs
---------------------------
+
 * Modular code in maintainable code
 * TDD / Testing is a tool to get to maintainable code
 * Modular design leads to transferable software skills
@@ -57,7 +53,7 @@ Orientation, continued...
 * Everyone in the community should get closer to their goals
 
 #### Community Standards
--------------------
+
 * Disruptive behavior is unacceptable
 * People will be asked to leave for disrupting community
 
@@ -94,6 +90,7 @@ Orientation, continued...
 ### Convention Over Configuration
 
 #### What
+
 A software design paradigm which seeks to decrease the number of decisions
 that developers need to make, gaining simplicity, but not necessarily losing
 flexibility.
@@ -182,7 +179,14 @@ up all the gems listed in your Gemfile. You ask it to do this when you type:
   bundle install
 ```
 
+## Rails
+
+This is a big picture intro to rails! You are not expected to understand the
+plethora of information covered today. The goal of the rails intro is simply to
+show you that these things exist.
+
 #### MVC
+
 * Model
 * View
 * Controller
@@ -195,3 +199,12 @@ up all the gems listed in your Gemfile. You ask it to do this when you type:
 If a spreadsheet is like a database, then the tabs in the spreadsheet are like
 the tables in the database. And just like a spreadsheet, each table (just like
 each tab) has rows and columns that hold data.
+
+#### Routes
+
+The routes file is where rails stores the paths to all the pages in your app. From
+the command line you can view all of the routes available in your app.
+
+```bash
+  rake routes
+```
