--- a/class-notes/2014-10-21.md
+++ b/class-notes/2014-10-21.md
@@ -23,7 +23,7 @@ Orientation, continued...
     * 2015-01-02
     * 2015-02-16
 
-[Intro to Rails](/lessons/rails-tutorial/00-overview/deliverable)
+[Intro to Rails](../lessons/rails-tutorial/00-overview/deliverable)
 
 ## gSchool Instructor Values and Beliefs
 
