add full url to lesson links

--- a/class-notes/2014-10-21.md
+++ b/class-notes/2014-10-21.md
@@ -23,8 +23,6 @@ Orientation, continued...
     * 2015-01-02
     * 2015-02-16
 
-[Intro to Rails](../lessons/rails-tutorial/00-overview/deliverable)
-
 ## gSchool Instructor Values and Beliefs
 
 #### Values
@@ -154,6 +152,7 @@ conventions, developers can minimize potential errors.
   touch name_of_new_file.txt
 ```
 
+
 #### Absolute paths vs Relative paths
 
 Absolute path starts with a forward slash (/)
@@ -185,6 +184,14 @@ This is a big picture intro to rails! You are not expected to understand the
 plethora of information covered today. The goal of the rails intro is simply to
 show you that these things exist.
 
+#### [This is Why Learning Rails is Hard](https://www.codefellows.org/blog/this-is-why-learning-rails-is-hard)
+
+#### [Intro to Rails](http://g5.gschool.it/lessons/rails-tutorial/00-overview/deliverable)
+
+* rails new
+* scaffolds
+* bootstrap
+
 #### MVC
 
 * Model
@@ -208,3 +215,9 @@ the command line you can view all of the routes available in your app.
 ```bash
   rake routes
 ```
+
+#### Big Picture From Today - Introduction to Developer Flow
+
+* Atom
+* Terminal
+* Chrome
