resful routes notes

--- a/class-notes/2014-10-22.md
+++ b/class-notes/2014-10-22.md
@@ -2,7 +2,7 @@
 
 #### Stand Up
 
-Window management tools
+Window management tools you might like:
 
 * [Shift It](http://shift-it.en.softonic.com/mac)
 * [Divvy](http://divvy.en.softonic.com/mac)
@@ -29,8 +29,20 @@ Window management tools
 * cmd+R = Refresh a browser window
 * cmd+S = save your file
 * cmd+Q = quit a program
-* cmd+w = close a page or file
+* cmd+W = close a page or file
+* cmd+K = in terminal, cmd+k will clear all text from the current window
 
-Adding the 'shift' key to any keyboard shortcuts will reverse the order in which
-you are toggling through items. Try these out in Atom as well and see which ones
-you like!
+Adding the 'shift' key to these keyboard shortcuts will reverse the order in which
+you are toggling through items. Try these out and see which ones you like!
+
+#### Rails Routes - [RESTful Routes](http://guides.rubyonrails.org/routing.html)
+
+|  HTTP Verb |      Path     |  Used For                                      |
+|------------|---------------|------------------------------------------------|
+| GET        | /projects     | display a list of all projects
+| GET        | /projects/new | return an HTML form for creating a new project |
+| POST       | /projects     | create a new project                           |
+| GET        | /projects/:id | display a specific project                     |
+| GET        | /projects/:id | return an HTML form for editing a project      |
+| PATCH/PUT  | /projects/:id | update a specific project                      |
+| DELETE     | /projects/:id | delete a specific projec                       |
