--- a/class-notes/2014-10-22.md
+++ b/class-notes/2014-10-22.md
@@ -1,5 +1,10 @@
 # October 22, 2014
 
+#### REMEMBER! This is a lot of new material. You are not expected to know it!
+
+This week is orientation and introductions to big concepts that we will then
+break down in the coming weeks. Don't stress! 
+
 #### Stand Up
 
 Window management tools you might like:
@@ -31,6 +36,8 @@ Window management tools you might like:
 * cmd+Q = quit a program
 * cmd+W = close a page or file
 * cmd+K = in terminal, cmd+k will clear all text from the current window
+* cmd+T = in ATOM, allows you to search for a file in your current project
+* cmd+F = in Chrome, use this to search for keywords on a page
 
 Adding the 'shift' key to these keyboard shortcuts will reverse the order in which
 you are toggling through items. Try these out and see which ones you like!
@@ -46,3 +53,10 @@ you are toggling through items. Try these out and see which ones you like!
 | GET        | /projects/:id |     return an HTML form for editing a project      |
 | PATCH/PUT  | /projects/:id |     update a specific project                      |
 | DELETE     | /projects/:id |     delete a specific projec                       |
+
+#### [Active Record Associations](http://guides.rubyonrails.org/association_basics.html)
+
+* Types of Associations (just a few to get you started)
+  * belongs_to
+  * has_many
+  * has_many :through
