--- a/class-notes/2014-10-22.md
+++ b/class-notes/2014-10-22.md
@@ -3,7 +3,7 @@
 #### REMEMBER! This is a lot of new material. You are not expected to know it!
 
 This week is orientation and introductions to big concepts that we will then
-break down in the coming weeks. Don't stress! 
+break down in the coming weeks. Don't stress!
 
 #### Stand Up
 
@@ -44,15 +44,15 @@ you are toggling through items. Try these out and see which ones you like!
 
 #### Rails Routes - [RESTful Routes](http://guides.rubyonrails.org/routing.html)
 
-|  HTTP Verb |      Path     |     Used For                                      |
-|------------|---------------|------------------------------------------------|
-| GET        | /projects     |     display a list of all projects
-| GET        | /projects/new |     return an HTML form for creating a new project |
-| POST       | /projects     |     create a new project                           |
-| GET        | /projects/:id |     display a specific project                     |
-| GET        | /projects/:id |     return an HTML form for editing a project      |
-| PATCH/PUT  | /projects/:id |     update a specific project                      |
-| DELETE     | /projects/:id |     delete a specific projec                       |
+HTTP Verb ====== Path ========== Used For
+=============|===============|=================================================
+GET ======== /projects ========= display a list of all projects
+GET ======== /projects/new ===== return an HTML form for creating a new project
+POST ======= /projects ========= create a new project
+GET ======== /projects/:id ===== display a specific project
+GET ======== /projects/:id ===== return an HTML form for editing a project
+PATCH/PUT == /projects/:id ===== update a specific project
+DELETE ===== /projects/:id ===== delete a specific project
 
 #### [Active Record Associations](http://guides.rubyonrails.org/association_basics.html)
 
