add bluemix and standup

--- a/class-notes/2014-10-23.md
+++ b/class-notes/2014-10-23.md
@@ -1,5 +1,19 @@
 # October 23, 2014
 
+#### Stand Up
+
+Spring - don't use it! Save yourself the trouble of having your app blow up.
+
+Two ways to avoid Spring:
+  1) rails new <name-of-app> --skip-spring
+  2) Remove the spring gem from you gemfile and bundle
+
+#### Bluemix Garage Launches!
+
+Talk by Steve Robinson, General Manager, IBM Cloud Platform Services
+
+Read more [here](http://asmarterplanet.com/blog/2014/10/bluemix-garage.html?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+ASmarterPlanet+(A+Smarter+Planet)
+
 #### RESTful Routes
 
 Check out [this link](http://guides.rubyonrails.org/routing.html) and go about
@@ -19,3 +33,5 @@ you also need to kill your server by typing 'ctrl+C' and then 'rail s' to start 
             #ctrl+C to kill your server
   rails s   #to restart your server
 ```
+
+####
