associations and crud

--- a/class-notes/2014-10-23.md
+++ b/class-notes/2014-10-23.md
@@ -12,18 +12,25 @@ Two ways to avoid Spring:
 
 Talk by Steve Robinson, General Manager, IBM Cloud Platform Services
 
-Read more [here](http://asmarterplanet.com/blog/2014/10/bluemix-garage.html?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+ASmarterPlanet+(A+Smarter+Planet)
+[here](http://asmarterplanet.com/blog/2014/10/bluemix-garage.html?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+ASmarterPlanet+(A+Smarter+Planet)
 
 #### RESTful Routes
 
 Check out [this link](http://guides.rubyonrails.org/routing.html) and go about
 halfway down the page for a table that very clearly shows these routes.
 
+#### CRUD
+
+* CREATE
+* READ
+* UPDATE
+* DELETE
+
 #### Bundler
 
 Bundler is a gem! And your personal gems shopper. Whenever you make changes to
 your gemfile, clone an app, or new up an app you need to run 'bundle' in
-your terminal (make sure you are in the right directory!). 
+your terminal (make sure you are in the right directory!).
 
 'bundle' is an alias for 'bundle install'. Either one is fine! Also, whenever you add gems or bundle,
 you also need to kill your server by typing 'ctrl+C' and then 'rail s' to start it up again.
@@ -34,4 +41,16 @@ you also need to kill your server by typing 'ctrl+C' and then 'rail s' to start 
   rails s   #to restart your server
 ```
 
-####
+#### [Relationships - Making Associations](http://g5.gschool.it/lessons/rails-tutorial/05-relationships-light/deliverable)
+
+  * Creating a method on the model
+
+#### [Rails Console](http://g5.gschool.it/lessons/rails-tutorial/06-console/deliverable)
+
+```bash
+  rails console
+
+  #OR
+
+  rails c
+```
