--- a/class-notes/2014-10-23.md
+++ b/class-notes/2014-10-23.md
@@ -43,25 +43,53 @@ you also need to kill your server by typing 'ctrl+C' and then 'rail s' to start 
 
 #### [Relationships - Making Associations](http://g5.gschool.it/lessons/rails-tutorial/05-relationships-light/deliverable)
 
-  * Creating a method on the model
+An ActiveRecord object in Ruby maps to a row in a database table and allows us
+to manipulate the data in the table by manipulating the Ruby object.
+
+#### ActiveRecord vs. Active Record
+
+The ActiveRecord gem implements the Active Record design pattern.
+
+Active Record is an object that wraps a row in a database table or view,
+encapsulates the database access, and adds domain logic on that data.
+- [Martin Fowler](http://www.martinfowler.com/eaaCatalog/activeRecord.html)
+
+#### Creating Data
+
+```bash
+user = User.new
+user.first_name = “Joe”
+user.save
+or
+user = User.create(first_name: “Joe”)
+```
+
+#### Reading Existing Data
+
+* find method with an ID
+
+```bash
+user = User.find(1)
+```
+
+* handy methods
+```bash
+user = User.first
+user = User.last
+```
 
 #### [Rails Console](http://g5.gschool.it/lessons/rails-tutorial/06-console/deliverable)
 
 ```bash
   rails console
-
   #OR
-
   rails c
 ```
 
 To exit rails console:
 
 ```bash
-
   exit
-
   #OR
-
   ctrl D
 ```
