--- a/class-notes/2014-10-23.md
+++ b/class-notes/2014-10-23.md
@@ -41,6 +41,22 @@ you also need to kill your server by typing 'ctrl+C' and then 'rail s' to start 
   rails s   #to restart your server
 ```
 
+#### [Rails Console](http://g5.gschool.it/lessons/rails-tutorial/06-console/deliverable)
+
+```bash
+  rails console
+  #OR
+  rails c
+```
+
+To exit rails console:
+
+```bash
+  exit
+  #OR
+  ctrl D
+```
+
 #### [Relationships - Making Associations](http://g5.gschool.it/lessons/rails-tutorial/05-relationships-light/deliverable)
 
 An ActiveRecord object in Ruby maps to a row in a database table and allows us
@@ -78,18 +94,21 @@ user = User.first
 user = User.last
 ```
 
-#### [Rails Console](http://g5.gschool.it/lessons/rails-tutorial/06-console/deliverable)
+#### Updating Data
 
 ```bash
-  rails console
-  #OR
-  rails c
+user = User.find(1)
+user.first_name = “Fred”
+user.save
+or
+user = User.find(1)
+user.update_attributes(first_name: “Fred”, last_name:
+“Rodgers”)
 ```
 
-To exit rails console:
+#### Destroying Data
 
 ```bash
-  exit
-  #OR
-  ctrl D
+user = User.find(1)
+user.destroy
 ```
