remove active record stuff

--- a/class-notes/2014-10-23.md
+++ b/class-notes/2014-10-23.md
@@ -59,17 +59,6 @@ To exit rails console:
 
 #### [Relationships - Making Associations](http://g5.gschool.it/lessons/rails-tutorial/05-relationships-light/deliverable)
 
-An ActiveRecord object in Ruby maps to a row in a database table and allows us
-to manipulate the data in the table by manipulating the Ruby object.
-
-#### ActiveRecord vs. Active Record
-
-The ActiveRecord gem implements the Active Record design pattern.
-
-Active Record is an object that wraps a row in a database table or view,
-encapsulates the database access, and adds domain logic on that data.
-- [Martin Fowler](http://www.martinfowler.com/eaaCatalog/activeRecord.html)
-
 #### Creating Data
 
 ```bash
@@ -112,3 +101,6 @@ user.update_attributes(first_name: “Fred”, last_name:
 user = User.find(1)
 user.destroy
 ```
+
+#### Chrome Developer Tools
+* cmd+option+i
