--- a/class-notes/2014-10-23.md
+++ b/class-notes/2014-10-23.md
@@ -4,10 +4,14 @@
 
 Spring - don't use it! Save yourself the trouble of having your app blow up.
 
-Two ways to avoid Spring:
+Two ways to create a new rails app and avoid Spring:
 
-  1) rails new <name-of-app> --skip-spring
-  2) Remove the spring gem from you gemfile and bundle
+```bash
+  rails new <name-of-app> --skip-spring
+```
+OR
+
+Remove the spring gem from you gemfile and bundle
 
 #### Bundler
 
