technologies from this week

--- a/class-notes/2014-10-23.md
+++ b/class-notes/2014-10-23.md
@@ -105,3 +105,25 @@ user.update_attributes(first_name: “Fred”, last_name:
 user = User.find(1)
 user.destroy
 ```
+
+#### Routes.rb - Setting the home page
+
+* located in the config folder of your rails app
+* controls what routes your app knows about
+* you can set the "home" page of your app by setting the 'root' route
+
+```ruby
+  root 'projects#index'
+```
+#### Migrations
+
+* How to write a migration
+* How to run a migration
+* When you run rake db:migrate, the application walks through each migration file
+and executes everything in the file.
+* migration file names start with numbers (a timestamp) followed by whatever you
+typed into the terminal when you generated the migration file.
+* rake db:rollback (This will rollback your migrations by one. It will undo each
+  most recent migration.) The file is not deleted, but the data and tables will
+  be dropped. You must run rake db:migrate to create your tables again. But all
+  data will be lost.
