--- a/class-notes/2014-10-24.md
+++ b/class-notes/2014-10-24.md
@@ -65,3 +65,29 @@ yourself and add definitions!
 
 * [Rails Guides](http://guides.rubyonrails.org/getting_started.html)
 * [Ruby on Rails - Code Walk Through Tutorial](https://www.youtube.com/watch?v=djApduemlf4)
+
+#### Routes (routes.rb)
+
+* controller actions
+* requests
+* http verb and path
+
+#### Active Record
+
+* .create - creates an object
+* .all - finds all of the objects
+* .find() - finds a specific object
+
+#### Errors
+
+In developer land, success is not defined by the absence of errors. It is the ability
+to get to get past one error and on to a new one :D. Get comfortable being
+uncomfortable!!
+
+* How to read errors
+* Be patient with errors! You will understand them more with time.
+
+#### Don't forget to stand up and walk away from a problem!
+
+Your mind also needs to rest. Take mental breaks and time off. Burning out will
+not be conducive to productive learning and happiness.
