--- a/class-notes/2014-10-27.md
+++ b/class-notes/2014-10-27.md
@@ -1,11 +1,12 @@
 ## Introduction to Git and GitHub
+* [The entire Pro Git book](http://git-scm.com/book/en/v2)
 
 The two things developers do most:
 
 * Collaberate
 * Make mistakes
 
-#### What is git?
+#### What is Git?
 
 Git is a version control system. It allows you to track changes you make to files
 on your machine. This is helpful for when you screw things up! And you will. And
@@ -50,3 +51,10 @@ Inside your project in Terminal do the following:
   #Now we can push it to GitHub
   git push origin master
 ```
+
+#### Ruby Basics
+
+* [Everything is an object](http://g5.gschool.it/lessons/ruby-basics/1-objects/deliverable)
+* [Varying with variables](http://g5.gschool.it/lessons/ruby-basics/2-variables/deliverable)
+* [In the flow](http://g5.gschool.it/lessons/ruby-basics/3-flow/deliverable)
+* [Strings](http://g5.gschool.it/lessons/ruby-basics/4-strings/deliverable)
