--- a/class-notes/2014-10-27.md
+++ b/class-notes/2014-10-27.md
@@ -52,9 +52,62 @@ Inside your project in Terminal do the following:
   git push origin master
 ```
 
-#### Ruby Basics
+## Ruby Basics
 
 * [Everything is an object](http://g5.gschool.it/lessons/ruby-basics/1-objects/deliverable)
 * [Varying with variables](http://g5.gschool.it/lessons/ruby-basics/2-variables/deliverable)
 * [In the flow](http://g5.gschool.it/lessons/ruby-basics/3-flow/deliverable)
 * [Strings](http://g5.gschool.it/lessons/ruby-basics/4-strings/deliverable)
+
+#### [Variables](http://www.tutorialspoint.com/ruby/ruby_variables.htm)
+
+* variables are written in snake_case
+* can contain any alphanumeric characters and an underscore ( _ )
+* cannot _start_ with a number
+* local variable vs global variable vs instance variable
+
+  * local variable
+
+    * begin with a lower case letter or underscore
+    * the scope of a local variable is limited
+
+  * global variable
+
+    * available everywhere (not recommended)
+    * start with a $ ($i_am_a_global_variable)
+
+  * instance variable
+
+    * begin with the @ symbol
+    * the scope of the instance variable is wider than a local, but is still
+      limited.
+
+#### Variables act like the things they hold
+
+```irb
+  #EXAMPLE 1
+
+  var_1 = 1
+  => 1
+  var_2 = 4
+  => 4
+  var_1 + var_2
+  => 5
+
+  #EXAMPLE 2
+
+  var_1 = "hello"
+  => "hello"
+  var_2 = "goodbye"
+  => "goodbye"
+  var_1 + var_2
+  => "hellogoodbye"
+  var_1 + " " + var_2
+  => "hello goodbye"
+```
+
+Above, in EXAMPLE 1, our two variables are Integers and behave like Integers. In
+EXAMPLE 2 we change those variables to Strings and they behave like Strings.
+
+Play around with some Ruby variables and methods in irb and experiment with the
+different types of objects.
