methods and irb

--- a/class-notes/2014-10-27.md
+++ b/class-notes/2014-10-27.md
@@ -108,3 +108,53 @@ EXAMPLE 2 we change those variables to Strings and they behave like Strings.
 
 Play around with some Ruby variables and methods in irb and experiment with the
 different types of objects.
+
+#### Playing with methods in irb (interactive ruby shell)
+
+irb is super fun for playing around with Ruby methods. Here are a few we tried
+out today. Go find some more and see what they do!
+
+```irb
+  string = "Hello John!"
+  => "Hello John"
+
+  string.gsub("John", "Kane")
+  => "Hello Kane!""
+```
+```irb
+
+  thing = 4
+  => 4
+  thing.class
+  => Fixnum
+
+  thing.methods
+  => [:to_s, :inspect, :-@, :+, :-, :*, :/, :div, :%, :modulo ...(many more!)]
+
+  thing.to_s
+  => "4"
+  thing.class
+  => Fixnum
+  #Are you surprised by this?? Didn't we just turn the integer 4 into the string
+  "4"? Well, we did, but we didn't assign the variable the new value.
+
+  thing = thing.to_s
+  => "4"
+  thing.class
+  => String
+
+```
+
+##### What other methods did we play around with?
+
+* .upcase
+* .downcase
+* .concat
+* +
+* -
+
+##### Try string interpolation!
+
+* always use double quotes for interpolation
+
+Check out these exercises on [RubyMonk](http://rubymonk.com/learning/books/1-ruby-primer/chapters/5-strings/lessons/31-string-basics)
