hashes and arrays

--- a/class-notes/2014-10-27.md
+++ b/class-notes/2014-10-27.md
@@ -158,3 +158,125 @@ out today. Go find some more and see what they do!
 * always use double quotes for interpolation
 
 Check out these exercises on [RubyMonk](http://rubymonk.com/learning/books/1-ruby-primer/chapters/5-strings/lessons/31-string-basics)
+
+#### Try doing the Ageist exercise again, but a different way than last time.
+
+Even if it doesn't seem like a better way! Playing around in Ruby is always beneficial.
+
+[Ageist Exercise](http://g5.gschool.it/lessons/ruby-basics/3-flow/deliverable)
+
+#### Know the Difference Between Arrays and Hashes (Collections)
+
+##### Arrays
+
+* Uses brackets []
+* An ordered list of values
+* Can hold any kind of data object (string, integer, symbol...)
+* Elements in an array are accessed by addressing their numerical place
+* Remember! The first element in an array has a numerical place of 0
+
+```irb
+
+  array = ["hello", 5, :cat, :dog, 7]
+  => ["hello", 5, :cat, :dog, 7]
+
+  array[0]
+  => "hello"
+
+  array[3]
+  => :dog
+
+  array.length
+  => 5
+
+  array.reverse
+  => [7, :dog, :cat, 5, "hello"]
+
+  array[-1] #This will give us the last element in an array
+  => 7
+
+  OR
+
+  array = array.reverse
+  array[-1]
+
+  #What will this give us now? Try it in irb and find out.
+
+```
+
+##### Play around in irb with some of these:
+
+Google these methods to find out more about how they work.
+
+* .unshift
+* .shift
+* .push
+* .pop
+* .last
+* .first
+* .insert
+* .delete
+* .delete_at
+
+Some of these methods actually mutate the state of your original array. Find out
+which ones.
+
+##### Hashes
+
+* Uses curly braces {}
+* Is an unordered list
+* A hash maps values to a key using a hash rocket (=>) or a colon (:)
+* Any data object can be used as a key
+* Elements in a hash are accessed using the key
+* Just like an array, you use brackets to access the value of an element
+
+```ruby
+
+  hash = {
+    "cat" => 4,
+      3 => "dog"
+  }
+
+  OR
+
+  hash = {
+    "cat" : 4,
+      3 : "dog"
+  }
+
+```
+
+In the above example, "cat" is the key and 4 is the value. And then 3 is the key
+and "dog" is the value. In a hash, the key always comes first and then the value.
+
+Make a hash in irb and practice accessing the values.
+
+```irb
+
+  hash = {
+    "cat" => 1,
+    "dog" => 2,
+    :mouse => 3,
+    5 => "bird"
+  }
+
+  hash["cat"]
+  => 1
+
+  hash[:mouse]
+  => 3
+
+  hash[:mouse] = 10
+  => 10
+
+  hash
+   => {"cat"=>1, "dog"=>2, :mouse=>10, 5=>"bird"}
+
+```
+
+Practice accessing and changing the values in your hashes and arrays.
+
+#### Tonight's Homework
+
+[Arrays](https://github.com/gSchool/array-exercises)
+[Hashes](https://github.com/gSchool/hash-exercises)
