hashes and arrays assessment

--- a/class-notes/2014-10-27.md
+++ b/class-notes/2014-10-27.md
@@ -278,5 +278,6 @@ Practice accessing and changing the values in your hashes and arrays.
 
 #### Tonight's Homework
 
+[Assessment](http://g5.gschool.it/lessons/ruby-basics/5-collections/deliverable)
 [Arrays](https://github.com/gSchool/array-exercises)
 [Hashes](https://github.com/gSchool/hash-exercises)
