regexes, what worked

--- a/class-notes/2014-10-28.md
+++ b/class-notes/2014-10-28.md
@@ -1,4 +1,4 @@
-October 28th, 2014
+## October 28th, 2014
 
 ## Breaking Down Problems
 
@@ -64,5 +64,28 @@ little and be open to unexpected, simple errors.
 When terminal is dumping a huge messy error message to you - check for stupid
 stuff like missing end statements, commas where they don't belong, a method
 being used improperly.
+
+### What Worked for People Today
+
+* ##### IRB
+* ##### Ruby Docs
+* ##### Drawing the problem out
+* ##### Psuedo code
+* ##### No "right" answer
+  * There are many ways to solve a coding problem. Check out other code and practice
+  understanding different solutions to the same problem.
+
+#### Whats a regular expression? (REGEX)
+
+Checkout [RegexOne](http://regexone.com/) for an introduction to regexes.
+
+Checkout out [Rubular](http://rubular.com/) to play around with how regexes (regular
+expressions) work.
+
+## REMEMBER
+
+* ##### Take breaks (every pomodoro or two. a pomodoro is 25 min)
+* ##### Ask for help. Don't spend more than 25 min stuck on the same problem. Ask a
+neighbor or instructor. At the very least, get up and walk around / do something else.
 
 #### Onward! You're doing great!
