--- a/class-notes/2014-10-28.md
+++ b/class-notes/2014-10-28.md
@@ -25,9 +25,9 @@ writing comments in your file. You do this by using the pound symbol ( # ).
 
 EXAMPLE:
 
-*  # A method name 'hey' takes an input
-*  # it checks the input to see if it is in all caps
-*  # it checks to see if the input is a question
+*  a method name 'hey' takes an input
+*  it checks the input to see if it is in all caps
+*  it checks to see if the input is a question
 
 #### 4 Steps To Keep You Going
 
@@ -67,11 +67,11 @@ being used improperly.
 
 ### What Worked for People Today
 
-* ##### IRB
-* ##### Ruby Docs
-* ##### Drawing the problem out
-* ##### Psuedo code
-* ##### No "right" answer
+* IRB
+* Ruby Docs
+* Drawing the problem out
+* Psuedo code
+* No "right" answer
   * There are many ways to solve a coding problem. Check out other code and practice
   understanding different solutions to the same problem.
 
@@ -84,8 +84,8 @@ expressions) work.
 
 ## REMEMBER
 
-* ##### Take breaks (every pomodoro or two. a pomodoro is 25 min)
-* ##### Ask for help. Don't spend more than 25 min stuck on the same problem. Ask a
+* Take breaks (every pomodoro or two. a pomodoro is 25 min)
+* Ask for help. Don't spend more than 25 min stuck on the same problem. Ask a
 neighbor or instructor. At the very least, get up and walk around / do something else.
 
 #### Onward! You're doing great!
