--- a/class-notes/2014-10-28.md
+++ b/class-notes/2014-10-28.md
@@ -25,9 +25,9 @@ writing comments in your file. You do this by using the pound symbol ( # ).
 
 EXAMPLE:
 
-*  a method name 'hey' takes an input
-*  it checks the input to see if it is in all caps
-*  it checks to see if the input is a question
+*  # a method name 'hey' takes an input
+*  # it checks the input to see if it is in all caps
+*  # it checks to see if the input is a question
 
 #### 4 Steps To Keep You Going
 
@@ -75,7 +75,7 @@ being used improperly.
   * There are many ways to solve a coding problem. Check out other code and practice
   understanding different solutions to the same problem.
 
-#### Whats a regular expression? (REGEX)
+#### What's a regular expression? (REGEX)
 
 Checkout [RegexOne](http://regexone.com/) for an introduction to regexes.
 
