rspec enumerables collections

--- a/class-notes/2014-10-29.md
+++ b/class-notes/2014-10-29.md
@@ -7,18 +7,62 @@
 * in Terminal, clone the repo
 
 ```bash
-
   git clone < ssh remote url >
-
 ```
 * cd into your local repo
 * in GitHub, create a new repo
 * copy the ssh remote url
 * in Terminal set the remote url to the new < ssh url > by doing the following:
-
 ```bash
 
   git remote set-url origin < new-ssh-url >
 
 ```
 * Done!!
+
+#### How to Add a Remote When None Yet Exists
+
+```bash
+  git remote add origin < ssh url >
+```
+#### RSpec
+
+* What is RSpec?
+
+  * RSpec is a testing tool for the Ruby programming language. You run RSpec
+    tests by typing:
+
+```bash
+  rspec
+```
+Please read this [pdf](http://g5.gschool.it/rspec.pdf) about RSpec. First is the
+overview, scroll down about halfway for the example slides.
+
+#### More on Ruby Collections
+
+* [Arrays](http://www.sitepoint.com/guide-ruby-collections-part-arrays/)
+* [Hashes, Sets, Ranges](http://www.sitepoint.com/guide-ruby-collections-ii-hashes-sets-ranges/)
+
+#### [Enumerables](http://www.eriktrautman.com/posts/ruby-explained-map-select-and-other-enumerable-methods)
+
+##### A few to get you started:
+
+* .each returns the original object it was called on
+* .each_with_index passes not just the current item but whatever position (or index)
+in the array the item was located in.
+* .select returns a new array filled only with items from the original array where
+the block you gave it returned true
+* .map or .collect return a new array filled with whatever gets returned by the
+ block each time it runs.
+
+##### More handy methods
+
+* .any? returns true/false (see the question mark?) and answers the question,
+"do ANY of the elements in this object pass the test in my block?".
+If your block returns true on any time it runs, any? will return true.
+* .all? returns true/false and answers the question, "do ALL the elements of
+this object pass the test in my block?".
+Every time the block runs it must return true for this method to return true.
+* .none? returns true only if NONE of the elements in the object return true
+when the block is run.
+* .find returns the first item in your object for which the block returns true.
