--- a/class-notes/2014-10-29.md
+++ b/class-notes/2014-10-29.md
@@ -1,5 +1,14 @@
 # October 29th, 2014
 
+#### Submitting your exercises to students.gschool.it
+
+* Go to students.gschool.it and login
+* Click on 'exercises'
+* click on the name of the exercise you want to submit
+* click on submit code
+* add your GitHub repo name (just the name of your repo, not the whole url)
+submit
+
 #### Cloning a Repo on GitHub and Setting a New Remote Url
 
 * Go to the GitHub repo you want
