git basics format

--- a/class-notes/2014-11-03.md
+++ b/class-notes/2014-11-03.md
@@ -1,5 +1,7 @@
 # November 3, 2014
 
+## Review Git Basics
+
 #### A great reference for material is the [Git Book](http://git-scm.com/book/en/v2/Git-Basics-Getting-a-Git-Repository)
 
 ##### For the list below, please type the git command used for each action:
@@ -7,7 +9,7 @@
 Also, write a brief description of what that command does and identify what part of
 our rocket ship analogy it is in.
 
-* Display your working directory?
+* Display your working directory
 * Initialize a git repository in a newly created local directory
 * Display the status of a repository
 * Identify if files are staged or not
