--- a/class-notes/2014-11-03.md
+++ b/class-notes/2014-11-03.md
@@ -1,33 +1,1 @@
-# November 3, 2014
-
-## Review Git Basics
-
-#### A great reference for material is the [Git Book](http://git-scm.com/book/en/v2/Git-Basics-Getting-a-Git-Repository)
-
-##### For the list below, please type the git command used for each action:
-
-Also, write a brief description of what that command does and identify what part of
-our rocket ship analogy it is in.
-
-* Display your working directory
-* Initialize a git repository in a newly created local directory
-* Display the status of a repository
-* Identify if files are staged or not
-* Add a file to the staging area
-* Commit the contents of the staging area using the -m flag
-* Commit using the -m flag with a multi-line description
-* Push your local repository to github (assume your remote is already set)
-* Add a remote to your repository (not part of rocket anaology)
-* Change an existing remote
-* Pull changes from a shared github repo to your local repo
-* Show the history of a git repository
-* Show a log of your commit history
-* Roll back to a specific commit in history
-
-#### You should understand the following:
-
-* Git stores the differences not versions of whole files - it is a history
-* How --hard differs from not using --hard
-* Why using --hard should be used with care
-* How undoing, discarding or changing commits affects code that has been pushed
-to a different remote
+# TDB
