--- a/class-notes/2014-11-04.md
+++ b/class-notes/2014-11-04.md
@@ -25,7 +25,10 @@
     * example: ^^ would go back two commits.
   * reset --hard throws things away. Be careful!
 
-#### Use the method .class to know what kind of object you have
+
+### Debugging Tip!
+
+#### Use the .class method to know what kind of object you have
 
 * What do you have?
 * What do you want?
@@ -41,9 +44,9 @@
   # => Array
 ```
 
-## GOAL
+### Goals
 
-### Understanding State
+#### Understanding State
 
 * initializing an object
 * being able to use the state of an object
