--- a/class-notes/2014-11-04.md
+++ b/class-notes/2014-11-04.md
@@ -25,10 +25,9 @@
     * example: ^^ would go back two commits.
   * reset --hard throws things away. Be careful!
 
+## Debugging Tips!
 
-### Debugging Tip!
-
-#### Use the .class method to know what kind of object you have
+### Use the .class method to know what kind of object you have
 
 * What do you have?
 * What do you want?
@@ -42,6 +41,37 @@
 
   puts @deck.shuffle.class
   # => Array
+```
+
+### Using `p` to inspect elements
+
+#### EXAMPLE:
+
+```ruby
+  p @deck # => inspects an object (in this case, an instance variable)
+```
+
+### When reading a Class, Ruby reads the entire class definition before executing
+
+* Unlike a method, which is read and executed top to bottom, methods in a Class
+can be executed in any order.
+
+### When accessing data within a Class, you must access it through a method
+
+```ruby
+  class Cat # => Blueprint
+
+    def initialize(name)
+      @name = name
+    end
+
+    def name
+      @name
+    end
+  end
+
+  cat = Cat.new("Chubler") # => object of the Cat class
+  name = cat.name # => method used to access the data (i.e. cat name)
 ```
 
 ### Goals
@@ -66,7 +96,7 @@ class Scopes
 
   def demo
 
-    # beginnign of method scope
+    # beginning of method scope
 
     # method stuff here...
 
