update class notes

--- a/class-notes/2014-10-28.md
+++ b/class-notes/2014-10-28.md
@@ -7,7 +7,7 @@
 
 Class, you are such troopers! Learning to write code and solve problems can be
 a head banging experience. Take a deep breath. I've found that it helps to start
-practice a process - a problem solving process that you can rest on when the going
+practicing a process - a problem solving process that you can rest on when the going
 gets tough and you want to throw your machine across the room.
 
 Eventually, you will all custom design your own process, or strategy, for how you
